[gd_scene load_steps=4 format=3 uid="uid://banpickscene"]

[ext_resource type="Script" path="res://scripts/ui/BanPickScene.gd" id="1"]
[ext_resource type="Theme" path="res://default_theme.tres" id="2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_Header"]
bg_color = Color(0.1, 0.1, 0.2, 0.9)
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 2
border_color = Color(0.5, 0.7, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_Turn"]
bg_color = Color(0.2, 0.2, 0.3, 0.8)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="BanPickScene" type="CanvasLayer"]
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.05, 0.1, 1)

[node name="MainContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/separation = 5

[node name="Spacer1" type="Control" parent="MainContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Header" type="Panel" parent="MainContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_Header")

[node name="HeaderLabel" type="Label" parent="MainContainer/Header"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 28
text = "Ban/Pick阶段"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TurnIndicator" type="Panel" parent="MainContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_Turn")

[node name="TurnLabel" type="Label" parent="MainContainer/TurnIndicator"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_colors/font_color = Color(0.8, 0.9, 1, 1)
theme_override_font_sizes/font_size = 20
text = "当前回合: 蓝方首选一英雄"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer2" type="Control" parent="MainContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="ContentContainer" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="CardArea" type="VBoxContainer" parent="MainContainer/ContentContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.5

[node name="CardGridLabel" type="Label" parent="MainContainer/ContentContainer/CardArea"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 1, 1)
theme_override_font_sizes/font_size = 18
text = "可选英雄"
horizontal_alignment = 1

[node name="CardGrid" type="GridContainer" parent="MainContainer/ContentContainer/CardArea"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 25
theme_override_constants/v_separation = 30
columns = 4

[node name="InfoArea" type="VBoxContainer" parent="MainContainer/ContentContainer"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2
size_flags_stretch_ratio = 1.0
theme_override_constants/separation = 20

[node name="SelectedCards" type="VBoxContainer" parent="MainContainer/ContentContainer/InfoArea"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SelectedCardsTitle" type="Label" parent="MainContainer/ContentContainer/InfoArea/SelectedCards"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "已选英雄"
horizontal_alignment = 1

[node name="TeamContainer" type="HBoxContainer" parent="MainContainer/ContentContainer/InfoArea/SelectedCards"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="BlueTeamContainer" type="VBoxContainer" parent="MainContainer/ContentContainer/InfoArea/SelectedCards/TeamContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BlueTeamLabel" type="Label" parent="MainContainer/ContentContainer/InfoArea/SelectedCards/TeamContainer/BlueTeamContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.6, 1, 1)
theme_override_font_sizes/font_size = 16
text = "蓝方队伍"
horizontal_alignment = 1

[node name="BlueTeam" type="VBoxContainer" parent="MainContainer/ContentContainer/InfoArea/SelectedCards/TeamContainer/BlueTeamContainer"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
theme_override_constants/separation = 5

[node name="RedTeamContainer" type="VBoxContainer" parent="MainContainer/ContentContainer/InfoArea/SelectedCards/TeamContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RedTeamLabel" type="Label" parent="MainContainer/ContentContainer/InfoArea/SelectedCards/TeamContainer/RedTeamContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.4, 0.4, 1)
theme_override_font_sizes/font_size = 16
text = "红方队伍"
horizontal_alignment = 1

[node name="RedTeam" type="VBoxContainer" parent="MainContainer/ContentContainer/InfoArea/SelectedCards/TeamContainer/RedTeamContainer"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
theme_override_constants/separation = 5

[node name="BannedCards" type="VBoxContainer" parent="MainContainer/ContentContainer/InfoArea"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="BannedCardsTitle" type="Label" parent="MainContainer/ContentContainer/InfoArea/BannedCards"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "已禁用英雄"
horizontal_alignment = 1

[node name="BansContainer" type="HBoxContainer" parent="MainContainer/ContentContainer/InfoArea/BannedCards"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="BlueBansContainer" type="VBoxContainer" parent="MainContainer/ContentContainer/InfoArea/BannedCards/BansContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BlueBansLabel" type="Label" parent="MainContainer/ContentContainer/InfoArea/BannedCards/BansContainer/BlueBansContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.6, 1, 1)
theme_override_font_sizes/font_size = 16
text = "蓝方禁用"
horizontal_alignment = 1

[node name="BlueBans" type="VBoxContainer" parent="MainContainer/ContentContainer/InfoArea/BannedCards/BansContainer/BlueBansContainer"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
theme_override_constants/separation = 5

[node name="RedBansContainer" type="VBoxContainer" parent="MainContainer/ContentContainer/InfoArea/BannedCards/BansContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RedBansLabel" type="Label" parent="MainContainer/ContentContainer/InfoArea/BannedCards/BansContainer/RedBansContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.4, 0.4, 1)
theme_override_font_sizes/font_size = 16
text = "红方禁用"
horizontal_alignment = 1

[node name="RedBans" type="VBoxContainer" parent="MainContainer/ContentContainer/InfoArea/BannedCards/BansContainer/RedBansContainer"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
theme_override_constants/separation = 5

[node name="Spacer3" type="Control" parent="MainContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="MainContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
alignment = 1

[node name="StartBattleButton" type="Button" parent="MainContainer/ButtonContainer"]
custom_minimum_size = Vector2(240, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "开始战斗"

[node name="Spacer4" type="Control" parent="MainContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2